<resources>
    <string name="app_name">Room for Book Worm</string>
    <string name="room_for_book_worm">Room for\nbook worm</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="login">Login</string>
    <string name="welcome_to_room_for_book_worm">Welcome to\n\"Room for\nbook worm\"</string>
    <string name="continue_without_login">Continue without login</string>
    <string name="dashboard_admin">Dashboard Admin</string>
    <string name="dashboard_user">Dashboard User</string>
    <string name="add_category">Add Category</string>
    <string name="add_a_new_category">Add a new Category</string>
    <string name="category_title">Category Title</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="add_a_new_book">Add a new book</string>
    <string name="book_title">Book Title</string>
    <string name="book_description">Book Description</string>
    <string name="book_category">Book Category</string>
    <string name="upload">Upload</string>
    <string name="category">Category</string>
    <string name="size">Size</string>
    <string name="_25_mb">25 MB</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="books">Books</string>
    <string name="book_details">Book Details</string>
    <string name="n_a">N/A</string>
    <string name="date">Date</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="read">Read</string>
    <string name="edit_book_info">Edit Book Info</string>
    <string name="read_book">Read Book</string>
    <string name="n_n">N/N</string>
    <string name="download">Download</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="example_mail_com">example@mail.com</string>
    <string name="account">Account</string>
    <string name="member">Member</string>
    <string name="favorite">Favorite</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
</resources>