<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_140sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    app:cardBackgroundColor="@color/row_categories"
    app:cardElevation="0dp"
    app:contentPadding="@dimen/_5sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/pdfLayout"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_140sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@color/primary_dark">

            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/pdfView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <TextView
            android:id="@+id/titleView"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/btnMore"
            android:layout_toEndOf="@id/pdfLayout"
            android:maxLines="1"
            android:text="@string/book_title" />

        <TextView
            android:id="@+id/descriptionView"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/categoryView"
            android:layout_below="@+id/titleView"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_toEndOf="@id/pdfLayout"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/book_description" />

        <TextView
            android:id="@+id/categoryView"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:maxLines="1"
            android:text="@string/category" />

        <TextView
            android:id="@+id/sizeView"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/pdfLayout"
            android:maxLines="1"
            android:text="@string/_25_mb" />

        <TextView
            android:id="@+id/dateView"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/categoryView"
            android:layout_toEndOf="@+id/sizeView"
            android:maxLines="1"
            android:text="@string/dd_mm_yyyy"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/btnMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-3dp"
            android:background="@android:color/transparent"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_more" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>