<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.PdfDetailActivity">

    <!--Header-->
    <RelativeLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/header_layout">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:paddingHorizontal="@dimen/_5sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/book_details"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bookOptions"
        android:layout_below="@id/header_title"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Book Details-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Book preview-->
                <RelativeLayout
                    android:id="@+id/pdfLayout"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_140sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@color/primary_dark">

                    <com.github.barteksc.pdfviewer.PDFView
                        android:id="@+id/pdfView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />


                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/titleView"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/pdfLayout"
                    android:maxLines="1"
                    android:text="@string/book_title" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titleView"
                    android:layout_toEndOf="@id/pdfLayout">

                    <TableRow>

                        <TextView
                            android:id="@+id/categoryLabelView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="@string/category" />

                        <TextView
                            android:id="@+id/categoryView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:text="@string/n_a" />

                    </TableRow>

                    <TableRow android:layout_marginTop="@dimen/_5sdp">

                        <TextView
                            android:id="@+id/dateLabelView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="@string/date" />

                        <TextView
                            android:id="@+id/dateView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:text="@string/n_a" />

                    </TableRow>

                    <TableRow android:layout_marginTop="@dimen/_5sdp">

                        <TextView
                            android:id="@+id/SizeLabelView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="@string/size" />

                        <TextView
                            android:id="@+id/sizeView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:text="@string/n_a" />

                    </TableRow>

                    <TableRow android:layout_marginTop="@dimen/_5sdp">

                        <TextView
                            android:id="@+id/viewsLabelView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="@string/views" />

                        <TextView
                            android:id="@+id/viewsView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:text="@string/n_a" />

                    </TableRow>

                    <TableRow android:layout_marginTop="@dimen/_5sdp">

                        <TextView
                            android:id="@+id/downloadsLabelView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:text="@string/downloads" />

                        <TextView
                            android:id="@+id/downloadsView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:text="@string/n_a" />

                    </TableRow>
                </TableLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/descriptionView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/book_description"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bookOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReadBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_dark"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/read" />

        <!--<com.google.android.material.button.MaterialButton
            android:id="@+id/btnDownloadBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_dark"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/download" />-->

    </LinearLayout>

</RelativeLayout>