<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingHorizontal="@dimen/_20sdp"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/welcome_to_room_for_book_worm"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/_20ssp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="@color/primary_dark"
        android:text="@string/login"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        android:layout_above="@+id/btnSkip"
        app:cornerRadius="@dimen/_8sdp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSkip"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:backgroundTint="@color/secondary_text"
        android:text="@string/continue_without_login"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp" />

</RelativeLayout>