<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.ProfileActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_165sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@color/background_dark" />

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/header_layout">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"
            app:tint="@color/text_icons" />

        <TextView
            android:id="@+id/TitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/profile"
            android:textColor="@color/text_icons"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnProfileEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_edit"
            app:tint="@color/text_icons" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_150sdp"
        android:background="@drawable/shape_profile" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:background="@color/gray"
        android:src="@drawable/ic_person"
        app:shapeAppearance="@style/styleRoundCornerImage" />

    <LinearLayout
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_150sdp"
        android:layout_toEndOf="@+id/profileImage"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profileEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/example_mail_com"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImage"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/accountTypeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/memberDateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/favoriteBookCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@id/detailLayout"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/gray" />

</RelativeLayout>