<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.PdfListAdminActivity">

  <!--Header-->
  <RelativeLayout
      android:id="@+id/header_title"
      android:layout_width="match_parent"
      android:layout_height="?actionBarSize"
      android:background="@drawable/header_layout">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/_10sdp"
        android:background="@android:color/transparent"
        android:paddingHorizontal="@dimen/_5sdp"
        android:src="@drawable/ic_back"
        app:tint="@color/white" />

      <TextView
          android:id="@+id/titleTv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="@dimen/_8sdp"
          android:text="@string/books"
          android:textColor="@color/white"
          android:textStyle="bold" />

    <TextView
        android:id="@+id/subTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTv"
        android:layout_centerHorizontal="true"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textStyle="italic" />

  </RelativeLayout>

    <EditText
        android:id="@+id/booksSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_title"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/background_dark"
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/search"
        android:padding="@dimen/_10sdp"
        android:textColorHint="@color/secondary_text" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/bookRecyclerView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@+id/booksSearch"
      android:layout_marginTop="@dimen/_5sdp"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      tools:listitem="@layout/row_pdf_admin" />

  </RelativeLayout>