<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.CategoryAddActivity">

    <RelativeLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/header_layout">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:paddingHorizontal="@dimen/_5sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_a_new_category"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_title"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_4sdp">

        <EditText
            android:id="@+id/inputCategory"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:background="@null"
            android:hint="@string/category_title"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:textColor="@color/primary_dark"
            android:textColorHint="@color/hint_text"
            android:textSize="@dimen/_13ssp" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardCategoryTitle"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="@color/primary_dark"
        android:minHeight="@dimen/_50sdp"
        android:text="@string/submit"
        android:textColor="@color/white" />

</RelativeLayout>