<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.ProfileEditActivity">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:background="@drawable/header_layout">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:paddingHorizontal="@dimen/_5sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_below="@+id/titleView"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@color/background"
            android:src="@drawable/ic_person_add"
            app:shapeAppearance="@style/styleRoundCornerImage" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_layout"
        android:layout_marginTop="@dimen/_10sdp">


        <!--Input Name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext"
                android:drawablePadding="@dimen/_15sdp"
                android:hint="@string/name"
                android:inputType="textPersonName|textCapWords"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_13ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:backgroundTint="@color/primary_dark"
            android:minHeight="@dimen/_50sdp"
            android:layout_below="@+id/nameLayout"
            android:text="@string/update"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/white" />


    </RelativeLayout>

</RelativeLayout>